Fixes grid gutter spacing issues and fixes hover effects on grid.

--- a/assets/css/events.styl
+++ b/assets/css/events.styl
@@ -3,7 +3,7 @@
 $event-height = 400px
 
 .container
-    padding 0
+    padding 2px
 
 .events
     width 100%
@@ -17,13 +17,25 @@ $event-height = 400px
     position relative
     overflow hidden
 
+    &:after
+        content ""
+        width 100%; height 100%
+        position absolute
+        top 0; left 0
+        opacity 0
+        transition opacity .25s ease-out
+        cursor pointer
+
+    &:hover:after
+        background $spark-yellow
+        opacity 0.6
+
 .image
     width 100%; height 100%
     position relative
     filter blur(5px)
     overflow hidden
-    :hover
-        filter grayscale(100%)
+
     .image-inner
         width 110%; height $event-height + 20px
         margin-top -10px; margin-left -5%
@@ -36,7 +48,7 @@ $event-height = 400px
     padding 30px 20px
     position absolute
     color white
-    font-size 28px
+    font-size 26px
     font-weight 700
     text-shadow 2px 2px 4px rgba(0,0,0,0.5)
     text-transform uppercase
@@ -76,3 +88,4 @@ $event-height = 400px
         left 0
     .name
         right 0; bottom 0
+        text-align right
